build after install

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:lint": "eslint src/",
     "fixlint": "prettier --write src/",
     "build": "babel src --out-dir lib --ignore 'src/__mocks__/**/*,src/__tests__/**/*'",
-    "prepack": "yarn build"
+    "install": "npm run build"
   },
   "keywords": [
     "react-native",
