--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-native-render-html",
+  "name": "bpetrified-rn-html-render",
   "version": "5.1.0",
-  "author": "Meliorence <contact@meliorence.com> (github.com/meliorence)",
+  "author": "ฺbpetrified <bpetrified@hotmail.com> (github.com/bpetrified)",
   "license": "BSD-2-Clause",
-  "repository": "https://github.com/meliorence/react-native-render-html",
+  "repository": "https://github.com/bpetrified/react-native-render-html",
   "description": "React Native component that renders HTML as native views",
   "types": "types/react-native-render-html/index.d.ts",
   "main": "lib/index.js",
-  "homepage": "https://github.com/meliorence/react-native-render-html",
+  "homepage": "https://github.com/bpetrified/react-native-render-html",
   "files": [
     "lib/",
     "src/",
@@ -25,7 +25,7 @@
     "test:lint": "eslint src/",
     "fixlint": "prettier --write src/",
     "build": "babel src --out-dir lib --ignore 'src/__mocks__/**/*,src/__tests__/**/*'",
-    "install": "npm run build"
+    "prepack": "yarn build"
   },
   "keywords": [
     "react-native",
